clusters/oracle-cluster/core/keycloak/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    name: keycloak
