clusters/oracle-cluster/core/keycloak/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    namespace: keycloak
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:K4lIecfzEdc+VXF8KTHhRlCl0CXxHFHCmsMtGw==,iv:bnc9fqgbGKEiWLntSIowR9L/8s0vYj6aOWYi/KYAuqA=,tag:1MiajfhIvgjllXz41cymfg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:YmreF+mIOY7OqYUggYq8MJo5Ptszg3u8emPCAw==,iv:Gv7sahEFAhTe9ZoyxdMT/ze9QC7kN1ScjtPWzwnSeFQ=,tag:WjgShKhVKahjnGOt9V7g3Q==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: keycloak-keycloak
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwTUZKT0hlaDhPRFhPYUs3
[...]
            3NSr29hvxinVXumQG9LFT8+JMmZlmTVX3OCWQSpC4CxghJ2kfTnqWA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-27T12:58:36Z"
    mac: ENC[AES256_GCM,data:1xI/eBHmVc1vNsvBt+Fq/GH0OPNMi3t3YjJ94Fdh9uxaHf5YaYsKlNoFPrmRyP//BsoCEeGciq2nVfMSOsuRK59XLxSnuiiOIIc9lKn56ruJ8CgqENd2uTbDl/ZU4Jdzc0CLX7RCLKddEw5r7gEl9RGrTiSTWFtKQKV8L4wKGOY=,iv:gZjvDis/+94HEbYqELUThoIDW6hgByh0w0SKkkrJ2hY=,tag:xlNJoKkz4V/W70Xm5+4/ZQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
